# client-server-app

./: CMakeLists.txt  README.txt
UML/: Client.uxf  Server.uxf
client/: CMakeLists.txt  main.cpp
client/include/: Client.h  CommandParser.h  InputDataHandler.h  PrintToConsole.h  ReadFromConsole.h  SignalHandler.h  SocketOperations.h
client/include/socket/: InetSocket.h  SocketFactory.h  UnixSocket.h
client/interface/: ICommandParser.h  IPrintMessage.h  IReadUserInput.h  ISocket.h  ISocketFactory.h  ISocketOperations.h
client/src/: Client.cpp  CommandParser.cpp  InputDataHandler.cpp  PrintToConsole.cpp  ReadFromConsole.cpp  SignalHandler.cpp  SocketOperations.cpp
client/src/socket/: InetSocket.cpp  SocketFactory.cpp  UnixSocket.cpp
client/test/: CMakeLists.txt  Client_test.cpp
client/types/include/: Constants.h  Types.h
client/types/src/: Types.cpp
executable/: client  server
server/: CMakeLists.txt  main.cpp
server/include/: ClientTracker.h  CommandParser.h  InMemoryKeyValueStorage.h  InputDataHandler.h  Server.h  SignalHandler.h
server/include/socket/: InetSocket.h  UnixSocket.h
server/interface/: ICommandParser.h  ISocket.h
server/src/: ClientTracker.cpp  CommandParser.cpp  InMemoryKeyValueStorage.cpp  InputDataHandler.cpp  Server.cpp  SignalHandler.cpp
server/src/socket/: InetSocket.cpp  UnixSocket.cpp
server/test/: CMakeLists.txt  InMemoryKeyValueStorage_test.cpp
server/types/include/: Constants.h  Types.h
server/types/src/: Types.cpp
